--- a/index.html
+++ b/index.html
@@ -79,13 +79,21 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Excepturi repellendus minus deleniti, asperiores mollitia debitis 
-                        fugiat dolorum optio modi eius laborum recusandae eos corrupti, 
-                        quibusdam praesentium maiores quasi. Rerum, illum. Aut impedit et 
-                        suscipit amet beatae ea corporis dolores illum. Veritatis dolores 
-                        voluptates similique distinctio nostrum cumque doloremque itaque 
-                        totam?</p>
+                    <p>
+                        I’m a curious and passionate individual who spends a lot of time coding and developing software, but there's much more to my journey. 
+                        Programming has been a true passion of mine for 4+ years, and this enthusiasm continues to grow with every new technological innovation. 
+                        I have hands-on experience across multiple domains, including Software Development, Machine Learning, Data Analytics, 
+                        and Front-end Web Development.
+                    </p>
+                    <p>
+                        I thrive in collaborative environments where teams come together to build innovative products. Feedback, discussion, and teamwork 
+                        not only enhance the final outcome but also contribute significantly to my personal growth and development.
+                    </p>
+                    <p>
+                        Beyond coding, I am passionate about Photography, which allows me to explore creativity and capture unique perspectives of the world around me.
+                    </p>
+                    
+                      
                 </div>
             </div>
         </div>
