--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <img src="./assets/project-1.png" 
                     alt="project-1" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Project one</h2>
+                <h2 class="experience-sub-title project-title">Gen AI 1</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
@@ -243,7 +243,7 @@
                     <img src="./assets/project-2.png" 
                     alt="project-2" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Project two</h2>
+                <h2 class="experience-sub-title project-title">Gen AI 2</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
@@ -264,7 +264,7 @@
                     <img src="./assets/project-3.png" 
                     alt="project-3" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Project three</h2>
+                <h2 class="experience-sub-title project-title">Gen AI 3</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
