--- a/index.html
+++ b/index.html
@@ -222,17 +222,17 @@
                     <img src="./assets/project-1.png" 
                     alt="project-1" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Gen AI 1</h2>
+                <h2 class="experience-sub-title project-title">Creating Virtual Team with Autogen</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
-                     onclick="location.href='https://github.com/'"
+                     onclick="location.href='https://github.com/danishfaizan8/GenAI_Project1'"
                      >
                         GitHub
                     </button>
                     <button 
                     class="btn btn-color-2 project-btn"
-                     onclick="location.href='https://github.com/'"
+                     onclick="location.href='https://github.com/danishfaizan8/GenAI_Project1'"
                      >
                         Live Demo
                     </button>
@@ -243,17 +243,17 @@
                     <img src="./assets/project-2.png" 
                     alt="project-2" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Gen AI 2</h2>
+                <h2 class="experience-sub-title project-title">Creating Virtual Team with LangChain</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
-                     onclick="location.href='https://github.com/'"
+                     onclick="location.href='https://github.com/danishfaizan8/GenAI_Project_2'"
                      >
                         GitHub
                     </button>
                     <button 
                     class="btn btn-color-2 project-btn"
-                     onclick="location.href='https://github.com/'"
+                     onclick="location.href='https://github.com/danishfaizan8/GenAI_Project_2'"
                      >
                         Live Demo
                     </button>
