--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-1.png" 
+                    <img src="./assets/project1.webp" 
                     alt="project-1" class="project-img"/>
                 </div>
                 <h2 class="experience-sub-title project-title">Gen AI 1</h2>
