--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <img src="./assets/project1.webp" 
                     alt="project-1" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Gen AI 1</h2>
+                <h2 class="experience-sub-title project-title">Creating Virutal Team with Autogen</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
@@ -240,10 +240,10 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-2.png" 
+                    <img src="./assets/project1.webp" 
                     alt="project-2" class="project-img"/>
                 </div>
-                <h2 class="experience-sub-title project-title">Gen AI 2</h2>
+                <h2 class="experience-sub-title project-title">Creating Virtual Team with LangChain</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn"
@@ -261,7 +261,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-3.png" 
+                    <img src="./assets/project3.webp" 
                     alt="project-3" class="project-img"/>
                 </div>
                 <h2 class="experience-sub-title project-title">Ecommerce Website</h2>
